# TCR-CLAIM

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  reporte_clonotype_benchmark.md
docs/: six_month_publication_plan.md  tcr_claim_method.md
examples/: demo_tcr_claim.py
manuscript/: outline.md
r/: tcrbio_bridge.R
scripts/: audit_tcr_claim_datasets.py  generate_tcr_claim_figures.py  generate_tcr_claim_supplements.py  prefilter_tcr_claim_dataset.py  run_gse200996_prefilter_job.sh  run_tcr_claim_batch.py  run_tcr_claim_on_results.py  run_tcr_claim_tables.py  validate_against_r_benchmark.py  validate_batch_against_r_benchmark.py
tcrbio/: __init__.py  audit.py  claims.py  cli.py  definitions.py  diversity.py  figures.py  filters.py  io.py  metrics.py  normalize.py  phenotype.py  pipeline.py  prefilter.py  prioritize.py  qc.py  reporting.py  supplements.py  tables.py  xenium.py
tests/: test_tcrbio_core.py
